# Home

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  config.h.in  data.json  main.cpp  main.cxx
include/: app.hpp  core.hpp
include/debug/: debug.hpp
include/file/: filehandler.hpp
include/filemanager/: filemanager.hpp
include/json/: json.hpp  jsonhandler.hpp  responce.hpp
include/server/: server.hpp
include/session/: command.hpp  deadcode.hpp  session.hpp  sessionerror.hpp  sessionhandler.hpp
include/ui/: controller.hpp  displayed_connection.hpp  icontroller.hpp  status.hpp  ui.hpp
include/utility/: file.hpp
modules/: CMakeLists.txt  dllexport.hpp
modules/adapters/: CMakeLists.txt  adapters_api.hpp  controller.hpp  deserializer.hpp  deserializerimpl.cxx  deserializerimpl.hpp  json.hpp  jsonconverter.hpp  serializer.hpp  serializerimpl.cxx  serializerimpl.hpp  web_write_controller.cxx  web_write_controller.hpp  webcontroller.cxx  webcontroller.hpp  write_controller.hpp
modules/adapters/binary_manipulation/: binary_creator.hpp  binary_extractor.cxx  binary_extractor.hpp
modules/business_rules/: CMakeLists.txt  business_rules_api.hpp
modules/business_rules/entities/: entities.cxx  entities.hpp  filemanipulator.hpp  filemanipulatorimpl.hpp  filereadstream.cxx  filereadstream.hpp  filereadstreamfactory.cxx  filereadstreamfactory.hpp  filewritestream.cxx  filewritestream.hpp  filewritestreamfactory.cxx  filewritestreamfactory.hpp  readstream.hpp  readstreamfactory.hpp  writestream.hpp  writestreamfactory.hpp
modules/business_rules/interactor/: boundary.hpp  definitions.hpp  files.hpp  inputdata.hpp  interactor.cxx  interactor.hpp  ioboundary.hpp  outputdata.hpp  read_boundary.hpp  write_boundary.hpp
modules/core/: container.hpp  controller.cxx  controller.hpp  controller_impl.cxx  controller_impl.hpp  crypto.hpp  decoder.hpp  decoder_base64.cxx  decoder_base64.hpp  encoder.hpp  encoder_base64.cxx  encoder_base64.hpp  hash_table.hpp  interactor.hpp  interactor_impl.cxx  interactor_impl.hpp  json_container.cxx  json_container.hpp  parser.hpp
modules/entities/: CMakeLists.txt  entities_api.hpp  filemanipulator.hpp  filemanipulatorimpl.cxx  filemanipulatorimpl.hpp
modules/network/: CMakeLists.txt  network.cpp  network.hpp
modules/utility/: converter.hpp
modules/webserver/: html_definitions.hpp  html_files.cxx  html_files.hpp  html_parser.cxx  html_parser.hpp  html_transfer.cxx  html_transfer.hpp  htmlparser.cxx  htmlparser.hpp  net_lib.hpp  webserver.cxx  webserver.hpp
src/file/: filehandler.cpp
src/filemanager/: filemanager.cpp
src/json/: json.cpp  jsonhandler.cpp
src/server/: server.cpp
src/session/: session.cpp  sessionerror.cpp  sessionhandler.cpp
src/ui/: controller.cpp  ui.cpp
test/: CMakeLists.txt  tests.hpp
test/tests/: configtest.hpp  test_base.hpp
test/tests/controller_test/: controller_test.hpp  test_definitions.hpp
test/tests/entities_test/: entities_test.hpp  test_definitions.hpp
test/tests/generators/: html_files_generator.hpp
test/tests/integration_tests/: encoder_decoder_test.hpp  encoding_decoding_test.hpp  general_test.hpp  reader.hpp  sending_test.hpp  write_get_filenames_test.hpp  write_read_test.hpp
test/tests/interactor_test/: interactor_test.hpp  test_definitions.hpp
test/tests/unit_tests/: controller_test.hpp  decoder_test.hpp  encoder_decoder_test.hpp  encoder_test.hpp  interactor_test.hpp  jsonoutput_test.hpp  parser_test.hpp  test_base.hpp  webserver_test.hpp
test/tests/utility/: generators.hpp  html_maker.hpp  reader.hpp
